--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -46,6 +46,11 @@
                 android:textColor="?android:textColorPrimary"
                 android:textSize="20sp"/>
 
+            <TextView
+                android:id="@+id/theme_count"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/actionbar_theme_count_loading"/>
         </LinearLayout>
     </android.support.v7.widget.Toolbar>
 
@@ -58,11 +63,11 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true" />
 
-    <android.support.v4.view.ViewPager
+    <!--<android.support.v4.view.ViewPager
         android:id="@+id/pager"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="60dp"/>
+        android:layout_marginBottom="60dp"/>-->
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/navigation"
