Remove firebase, Add subs team fragment, up build version

--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -55,8 +55,19 @@
     </android.support.v7.widget.Toolbar>
 
     <FrameLayout
-         android:id="@+id/main"
-         android:layout_width="match_parent"
-         android:layout_height="match_parent"/>
+        android:id="@+id/main"
+        android:background="@color/main_launcher_background"
+        android:layout_below="@id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true" />
+
+    <android.support.design.widget.BottomNavigationView
+        android:id="@+id/navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        app:menu="@menu/navigation" />
 
 </RelativeLayout>
